--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "devserver": "webpack-dev-server --progress --colors --hot"
   },
   "author": "SungMin Chang",
   "license": "ISC"
