--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "devserver": "webpack-dev-server --progress --colors --hot"
+    "dev": "webpack-dev-server --progress --colors --hot --inline"
   },
   "author": "SungMin Chang",
   "license": "ISC"
