[features] add viewport settings back in, style changes

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "webpack-dev-server --progress --colors --hot --inline",
-    "sass": "sass --watch public/main.scss:public/main.css"
+    "build": "webpack ./entry.js bundle.js",
+    "sass": "sass --watch public/main.scss:public/main.css",
+    "ngrok": "~/Downloads/ngrok 8080"
   },
   "author": "SungMin Chang",
   "license": "ISC"
