--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "devDependencies": {
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.5",
+    "grunt": "^0.4.5",
+    "grunt-aws-s3": "^0.14.4",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
