--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "file-loader": "^0.8.5",
     "grunt": "^0.4.5",
     "grunt-aws-s3": "^0.14.4",
+    "grunt-contrib-cssmin": "^0.14.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
